--- a/app/src/main/res/layout/row_talk.xml
+++ b/app/src/main/res/layout/row_talk.xml
@@ -10,11 +10,11 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/name_textView"
+            android:id="@+id/TV_nickname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
-            android:text="Name"
+            android:text="sadsadasd"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -23,15 +23,14 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/position_textview"
+            android:id="@+id/TV_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.079"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/name_textView"
+            app:layout_constraintTop_toBottomOf="@+id/TV_nickname"
             app:layout_constraintVertical_bias="0.021" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
