--- a/app/src/main/res/layout/activity_crea_talk.xml
+++ b/app/src/main/res/layout/activity_crea_talk.xml
@@ -4,45 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="24dp"
     tools:context=".CreaTalk">
 
     <EditText
-        android:id="@+id/TA_Talk"
-        android:layout_width="366dp"
-        android:layout_height="208dp"
-        android:layout_marginBottom="312dp"
+        android:id="@+id/ET_testoTalk"
+        android:layout_width="363dp"
+        android:layout_height="300dp"
+        android:autofillHints=""
+        android:background="#FFFFFF"
+        android:backgroundTint="#33FFBB33"
         android:drawableTint="@color/orange_light"
-        android:ems="10"
+        android:hint="@string/talkHint"
         android:inputType="textLongMessage|textMultiLine"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/B_UploadPost"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/TV_newPost" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/TV_newPost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
         android:text="@string/newPost"
         android:textColor="@color/orange_light"
         android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/ET_testoTalk"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="148dp"
-        android:text="Text"
-        android:textColor="@color/orange_light"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -50,10 +41,11 @@
         android:id="@+id/B_UploadPost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="104dp"
         android:onClick="creaNuovoTalk"
         android:text="@string/submit"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TA_Talk" />
+        app:layout_constraintTop_toBottomOf="@+id/ET_testoTalk" />
 </androidx.constraintlayout.widget.ConstraintLayout>
