--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -60,6 +60,7 @@
         android:background="@color/orange_light"
         android:onClick="loginUtente"
         android:text="@string/login"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/b_registrati"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -74,6 +75,7 @@
         android:onClick="registraNuovoCliente"
         android:text="@string/join_now"
         android:textColor="@color/orange_dark"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
