--- a/app/src/main/res/layout/activity_registrazione.xml
+++ b/app/src/main/res/layout/activity_registrazione.xml
@@ -90,6 +90,7 @@
         android:layout_marginTop="32dp"
         android:onClick="checkRegistrazione"
         android:text="@string/signin"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
