--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     tools:context=".Login">
 
     <ImageView
-        android:id="@+id/immagine"
+        android:id="@+id/immagineLogin"
         android:layout_width="240dp"
         android:layout_height="240dp"
         android:layout_marginBottom="32dp"
@@ -34,7 +34,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/immagine" />
+        app:layout_constraintTop_toBottomOf="@+id/immagineLogin" />
 
     <EditText
         android:id="@+id/TF_PasswordLogin"
