TEST su dispositivo mobile

--- a/app/src/main/res/layout/activity_crea_talk.xml
+++ b/app/src/main/res/layout/activity_crea_talk.xml
@@ -7,23 +7,6 @@
     android:padding="24dp"
     tools:context=".CreaTalk">
 
-    <EditText
-        android:id="@+id/ET_testoTalk"
-        android:layout_width="363dp"
-        android:layout_height="300dp"
-        android:autofillHints=""
-        android:background="#FFFFFF"
-        android:backgroundTint="#33FFBB33"
-        android:drawableTint="@color/orange_light"
-        android:hint="@string/talkHint"
-        android:inputType="textLongMessage|textMultiLine"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/B_UploadPost"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TV_newPost" />
-
     <TextView
         android:id="@+id/TV_newPost"
         android:layout_width="wrap_content"
@@ -33,20 +16,50 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/ET_testoTalk"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/ET_testoTalk"
+        android:layout_width="0dp"
+        android:layout_height="300dp"
+        android:autofillHints=""
+        android:background="#FFFFFF"
+        android:backgroundTint="#33FFBB33"
+        android:drawableTint="@color/orange_light"
+        android:hint="@string/talkHint"
+        android:inputType="textLongMessage|textMultiLine"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/ET_linkSource"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TV_newPost" />
+
+    <EditText
+        android:id="@+id/ET_linkSource"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:autofillHints=""
+        android:background="#FFFFFF"
+        android:backgroundTint="#33FFBB33"
+        android:drawableTint="@color/orange_light"
+        android:hint="@string/linkHint"
+        android:inputType="textLongMessage|textMultiLine"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/B_UploadPost"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ET_testoTalk" />
 
     <Button
         android:id="@+id/B_UploadPost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="creaNuovoTalk"
+        android:onClick="createNewTalk"
         android:text="@string/submit"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ET_testoTalk" />
+        app:layout_constraintTop_toBottomOf="@+id/ET_linkSource" />
 </androidx.constraintlayout.widget.ConstraintLayout>
