--- a/app/src/main/res/layout/row_talk.xml
+++ b/app/src/main/res/layout/row_talk.xml
@@ -15,8 +15,8 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
             android:layout_marginStart="8dp"
             tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
@@ -30,8 +30,9 @@
             <TextView
                 android:id="@+id/TV_nickname"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_marginEnd="8dp"
+                android:layout_weight="1"
                 android:text="@string/tNickanme"
                 android:textColor="@color/black"
                 android:textSize="16sp"
@@ -42,8 +43,9 @@
             <TextView
                 android:id="@+id/TV_content"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_marginEnd="8dp"
+                android:layout_weight="1"
                 android:text="@string/tContent"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -55,8 +57,13 @@
             <TextView
                 android:id="@+id/TV_link"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="https://www.google.it/" />
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:autoLink="web"
+                android:linksClickable="true"
+                android:onClick="openLink"
+                android:text="https://www.google.it/"
+                android:textColorLink="@color/default_link" />
         </LinearLayout>
     </LinearLayout>
 
