--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,13 +12,13 @@
         android:layout_width="240dp"
         android:layout_height="240dp"
         android:layout_marginBottom="8dp"
-        android:contentDescription="@string/immagine_schermata_login"
         app:layout_constraintBottom_toTopOf="@+id/TF_EmailLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@mipmap/ic_launcher"
+        tools:ignore="ContentDescription"/>
 
     <EditText
         android:id="@+id/TF_EmailLogin"
