--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
             android:text="@string/app_name"
             android:textColor="@color/orange_light"
             android:textSize="40sp"
+            app:layout_constraintBottom_toTopOf="@+id/UserTalksRecyclerView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,26 +42,30 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0"
-            app:srcCompat="@android:drawable/ic_input_add" />
+            app:srcCompat="@android:drawable/ic_input_add"
+            tools:ignore="ContentDescription"
+            android:focusable="true" />
 
         <ImageButton
             android:id="@+id/settingsButton"
             style="@style/Widget.AppCompat.ImageButton"
-            android:layout_width="56dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:backgroundTint="#FFFFFF"
             android:foreground="@drawable/settings_drawable"
             android:foregroundTint="@color/orange_light"
             android:onClick="openSettings"
             android:rotationY="180"
+            android:src="@android:drawable/ic_menu_sort_by_size"
             android:tint="#F9A825"
             android:verticalScrollbarPosition="defaultPosition"
-            app:layout_constraintBottom_toBottomOf="@+id/textView2"
+            app:layout_constraintBottom_toTopOf="@+id/UserTalksRecyclerView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/textView2"
-            app:srcCompat="@android:drawable/ic_menu_sort_by_size" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/UserTalksRecyclerView"
@@ -68,9 +73,9 @@
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
