--- a/app/src/main/res/menu/popup_settings.xml
+++ b/app/src/main/res/menu/popup_settings.xml
@@ -5,6 +5,9 @@
         android:id="@+id/nightModeButton"
         android:title="@string/switchToNight" />
     <item
+        android:id="@+id/changeAccountPicture"
+        android:title="@string/changePicture" />
+    <item
         android:id="@+id/logoutButton"
         android:title="@string/logOut" />
 </menu>
